--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.8",
+    "react-native-svg": "13.4.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.10",
     "twrnc": "^3.6.1"
