feat(state): adds theme context provider for global theme-ing

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "expornstarter",
   "version": "1.0.0-development",
-  "main": "src/index.ts",
+  "main": "src/index.tsx",
   "types": "index.d.ts",
   "scripts": {
     "start": "expo start",
