--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expornstarter",
+  "name": "pif-app",
   "version": "1.0.0-development",
   "main": "src/index.tsx",
   "types": "index.d.ts",
@@ -17,17 +17,22 @@
     "release:push": "git push --follow-tags origin next"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@expo/webpack-config": "^18.0.1",
     "@tanstack/react-query": "^4.29.12",
     "axios": "^1.4.0",
     "eslint-config-prettier": "^8.8.0",
     "expo": "^48.0.19",
+    "expo-constants": "~14.2.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.8",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-svg": "13.4.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.10",
@@ -42,6 +47,7 @@
     "@semantic-release/npm": "^10.0.4",
     "@semantic-release/release-notes-generator": "^11.0.3",
     "@types/react": "~18.0.14",
+    "@types/react-native": "^0.72.2",
     "@types/react-native-dotenv": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
