--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "axios": "^1.4.0",
     "eslint-config-prettier": "^8.8.0",
     "expo": "^48.0.19",
-    "expo-constants": "~14.2.1",
+    "expo-constants": "^14.4.2",
     "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.13",
     "react-native-dotenv": "^3.4.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
